<resources>
    <string name="app_name">MDme</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_settings">Settings</string>
    <string name="login">login</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="home_nav_first">{fa-calendar} My Appointments</string>
    <string name="home_nav_second">{fa-user-md} My Physicians &amp; Clinicians</string>
    <string name="home_nav_third">{fa-file-text} My Health Information</string>
    <string name="home_nav_fourth">{fa-eyedropper} My Medications &amp; Prescriptions</string>
    <string name="home_nav_fifth">{fa-hospital-o} My Hospitals &amp; Clinics</string>
    <string name="home_nav_sixth">{fa-qrcode} My Appointment Check-In</string>
    <string name="desc_avatar">Profile image</string>
    <string name="minutes_until_appointment">minutes until appointment</string>
    <string name="appointment_home_nav_first">My Scheduled Appointments</string>
    <string name="appointment_home_nav_second">Review open Appointment Requests</string>
    <string name="appointment_home_nav_third">Submit Appointment Request</string>
    <string name="appointment_home_nav_fourth">Change an Appointment</string>
    <string name="home_activity">Home Activity</string>
    <string name="appointment_details">Appointment Details</string>
    <string name="time">Time:</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_checkin">My Appointment Check-In</string>
    <string name="title_activity_home_tabbed">HomeTabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_home_nav_activitiy">HomeNavActivitiy</string>
    <string name="title_activity_home_nav">HomeNavActivity</string>
    <string name="title_activity_appointment_creator">AppointmentCreatorActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
